manifests/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cedar-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    url: https://127.0.0.1:10288/v1/admit
    caBundle: CA_BUNDLE_CONTENT
  failurePolicy: Ignore
  name: vpolicy.cedar.k8s.aws
  rules:
  - apiGroups:
    - "*"
    apiVersions:
    - "*"
    operations:
    - CREATE
    - UPDATE
    - DELETE
    - CONNECT
    resources:
    - "*/*"
  sideEffects: None
  timeoutSeconds: 30
